[kom-9] callback
