# apps/api/internal/auth/usecase.go
@@ -2,11 +2,19 @@ package auth
 
 import (
 	"errors"
+	"net/url"
 
+	"github.com/coreos/go-oidc/v3/oidc"
+	"github.com/komiklab/komik/apidefn"
+	"github.com/komiklab/komik/internal"
 	"github.com/komiklab/komik/internal/client"
 	"github.com/komiklab/komik/internal/models"
 	"github.com/komiklab/komik/internal/repositories"
 	"github.com/komiklab/komik/internal/utils"
+	"github.com/labstack/echo/v5"
+	"golang.org/x/oauth2"
+	"strings"
+	// "golang.org/x/oauth2"
 )
 
 type AuthService struct {
@@ -43,7 +51,7 @@ func (a *AuthService) VerifyPassword(admin *models.Admin) error {
 	if utils.IsErrNotNil(err) {
 		return err
 	}
-	verified, err := utils.VerifyPassword(passwordReceived,hashedPassword)
+	verified, err := utils.VerifyPassword(passwordReceived, hashedPassword)
 	if utils.IsErrNotNil(err) {
 		return utils.NewInternalServerError("could not verify password because of internal issue", err)
 	}
@@ -53,7 +61,7 @@ func (a *AuthService) VerifyPassword(admin *models.Admin) error {
 	return nil
 }
 
-func (a *AuthService) CreateSession(user models.UserRepresentation) (string, error){
+func (a *AuthService) CreateSession(user models.UserRepresentation) (string, error) {
 	// we will first store the user if its new in database
 	err := a.authrepo.SaveUserIfNotExist(user)
 	if utils.IsErrNotNil(err) {
@@ -63,8 +71,85 @@ func (a *AuthService) CreateSession(user models.UserRepresentation) (string, err
 	sessionID, err := a.authrepo.CreateSession(&user)
 	if utils.IsErrNotNil(err) {
 		return "", err
-	}	
+	}
 	return sessionID, nil
 }
-	
 
+func (a *AuthService) FetchUser(ctx *echo.Context, params apidefn.GetAuthOidcCallbackParams, cfg *internal.Config) (*models.UserRepresentation, error) {
+	oauthConfig := &oauth2.Config{
+		ClientID:     cfg.OauthConfig.ClientID,
+		ClientSecret: cfg.OauthConfig.ClientSecret,
+		RedirectURL:  cfg.OauthConfig.RedirectURL,
+		Scopes:       strings.Split(cfg.OauthConfig.Scopes, " "),
+		Endpoint: oauth2.Endpoint{
+			AuthURL:  cfg.OauthConfig.AuthURL,
+			TokenURL: cfg.OauthConfig.TokenURL,
+		},
+	}
+	state, err := ctx.Cookie("state")
+	if utils.IsErrNotNil(err) {
+		return nil, utils.NewAuthenticationError("unauthorized", errors.New("unable to extract session from context"))
+	}
+	queryState := ctx.QueryParam("state")
+	if utils.IsErrNotNil(err) {
+		return nil, utils.NewAuthenticationError("unauthorized", errors.New("unable to extract session from context"))
+	}
+	if queryState != state.Value {
+		return nil, utils.NewAuthenticationError("unauthorized", errors.New("unable to extract session from context"))
+	}
+	codeVerifier, err := ctx.Cookie("code_verifier")
+	if utils.IsErrNotNil(err) {
+		return nil, utils.NewAuthenticationError("unauthorized", errors.New("unable to extract session from context"))
+	}
+	nonce, err := ctx.Cookie("nonce")
+	if utils.IsErrNotNil(err) {
+		return nil, utils.NewAuthenticationError("unauthorized", errors.New("unable to extract session from context"))
+	}
+
+	token, err := oauthConfig.Exchange(ctx.Request().Context(), params.Code, oauth2.VerifierOption(codeVerifier.Value))
+	if utils.IsErrNotNil(err) {
+		return nil, utils.NewAuthenticationError("unauthorized", errors.New("unable to extract session from context"))
+	}
+	rawIDToken, ok := token.Extra("id_token").(string)
+	if !ok || rawIDToken == "" {
+		return nil, utils.NewAuthenticationError("unauthorized", errors.New("unable to extract session from context"))
+	}
+	// 	// verify ID token
+	authURL, err := url.Parse(cfg.OauthConfig.AuthURL)
+	if err != nil {
+		return nil, utils.NewAuthenticationError("unauthorized", errors.New("unable to parse auth url"))
+	}
+	issuerURL := authURL.Scheme + "://" + authURL.Host + "/"
+
+	provider, err := oidc.NewProvider(ctx.Request().Context(), issuerURL)
+	if err != nil {
+		return nil, utils.NewAuthenticationError("unauthorized", errors.New("unable to create oidc provider"))
+	}
+
+	verifier := provider.Verifier(&oidc.Config{ClientID: cfg.OauthConfig.ClientID})
+	idToken, err := verifier.Verify(ctx.Request().Context(), rawIDToken)
+	if err != nil {
+		return nil, utils.NewAuthenticationError("unauthorized", errors.New("invalid id token"))
+	}
+	// check id token nonce
+	if idToken.Nonce != nonce.Value {
+		return nil, utils.NewAuthenticationError("unauthorized", errors.New("invalid nonce"))
+	}
+	// check id token iss
+	if idToken.Issuer != issuerURL {
+		return nil, utils.NewAuthenticationError("unauthorized", errors.New("invalid issuer"))
+	}
+	// check id token sub
+	if idToken.Subject == "" {
+		return nil, utils.NewAuthenticationError("unauthorized", errors.New("invalid subject"))
+	}
+
+	// get the user now
+	userInfo, err := provider.UserInfo(ctx.Request().Context(), oauth2.StaticTokenSource(token))
+	if err != nil {
+		return nil, utils.NewAuthenticationError("unauthorized", errors.New("failed to get user info"))
+	}
+	user := models.NewUserRepresentation(userInfo.Email)
+	return user, nil
+
+}
